- Added to Engine URLS; conf settings, static imports & removed 404 and 505 error pages for future development. - Corrected Projects container-1 spacing error, and minor visual changes - Tidied project CSS - Updated pip packages and upgraded Django to Django 3 - Modified requirements file with updated package list - Modified views module, removing 404 and 505 error pages for future development.

--- a/portfolio/static/css/projects.css
+++ b/portfolio/static/css/projects.css
@@ -6,15 +6,14 @@ body{
 
 .container-1{
     background-image: url(../images/stars.png);
-    /* background-size: cover; */
     background-attachment: fixed;
-    padding: 30%;
+    padding: 25% 25% 30% 25%;
 }
 
 .container-1 h1{
-    text-align: center;
     font-family: 'Cabin Sketch', cursive;
-    font-size: 550%;
+    font-size: 600%;
+    text-align: center;
 }
 
 
@@ -24,8 +23,6 @@ body{
     background-size: cover;
     padding: 8vw;
     margin-bottom: 2%;
-    /* margin-top: 6%; */
-    /* background-color: aqua; */
 }
 
 .container-fluid h1{
@@ -50,17 +47,11 @@ body{
     font-size: 70%;
 }
 
-#text-container{
-    color: white;
-    background-color: aqua;
-    text-align: right;
-}
 
 .detail{
     float: right;
     padding: 5% 8% 5% 8%;
     font-size: 280%;
     font-family: 'Cabin Sketch', cursive;
-    /* background-color: darkblue; */
 }
 
